k8s/03-samlproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samlproxy
  labels:
    app: samlproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samlproxy
  template:
    metadata:
      labels:
        app: samlproxy
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: samlproxy
        image: registry.digitalocean.com/samltools/samlproxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        volumeMounts:
        - name: config-volume
          mountPath: /app/configs/
        - name: converted-certs
          mountPath: /app/certs/proxy/
        readinessProbe:
          httpGet:
            path: /metadata
            port: 8082
          initialDelaySeconds: 15
          periodSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      volumes:
      - name: config-volume
        configMap:
          name: samlproxy-config
      - name: cert-volume
        secret:
          secretName: proxy-tls-cert
      - name: converted-certs
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: samlproxy
spec:
  selector:
    app: samlproxy
  ports:
  - port: 8082
    targetPort: 8082
    name: http
  type: ClusterIP
