k8s/simple-idp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-samlidp
  namespace: saml-tools
  labels:
    app: test-samlidp
spec:
  containers:
  - name: python-server
    image: python:3.9-alpine
    command: ["python", "-m", "http.server", "8085"]
    ports:
    - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: samlidp
  namespace: saml-tools
spec:
  selector:
    app: test-samlidp
  ports:
  - port: 8085
    targetPort: 8085
    name: http
  type: ClusterIP
