k8s/test-samlidp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-samlidp
  namespace: saml-tools
spec:
  selector:
    app: test-samlidp
  ports:
  - port: 8085
    targetPort: 8085
    name: http
  type: ClusterIP
