k8s/05-ingress-idpbridge-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idpbridge-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:712822969144:certificate/4e0418d2-790b-43b0-af70-7f218df497a1
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
  - host: client.idpbridge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samlclient
            port:
              number: 8080
  - host: proxy.idpbridge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samlproxy
            port:
              number: 8082
  - host: idp.idpbridge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samlidp
            port:
              number: 8085
