k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saml-tools-ingress
  namespace: saml-tools
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - client.saml-tester.com
    secretName: client-tls-cert
  - hosts:
    - proxy.saml-tester.com
    secretName: proxy-tls-cert
  - hosts:
    - idp.saml-tester.com
    secretName: idp-tls-cert
  rules:
  - host: client.saml-tester.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samlclient
            port:
              number: 8080
  - host: proxy.saml-tester.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samlproxy
            port:
              number: 8082
  - host: idp.saml-tester.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: samlidp
            port:
              number: 8085
